--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  margin: 0 auto; 
+  width: 50%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+
+  border: 3px solid grey;
+
+  padding: 10%;
+}
+
+.title-site {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.reviews__form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.reviews__textarea {
+  margin-bottom: 10px;
+
+  min-height: 50px;
+  width: 40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reviews__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-bottom: 10px;
+}
+
+.reviews__item {
+  min-width: 30%;
+
+  border: 1px solid grey;
+  margin: 10px 0 10px 0;
+
+  text-align: center;
 }
