--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -16,7 +16,7 @@ li {
   width: 50%;
 }
 
-.container {
+.main {
   display: flex;
   flex-direction: column;
 
@@ -29,20 +29,20 @@ li {
   text-align: center;
 }
 
-.reviews__form {
+.comments__form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.reviews__textarea {
+.comments__textarea {
   margin-bottom: 10px;
 
   min-height: 50px;
   width: 40%;
 }
 
-.reviews__list {
+.comments__list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@ li {
   padding-bottom: 10px;
 }
 
-.reviews__item {
+.comments__item {
   min-width: 30%;
 
   border: 1px solid grey;
