--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -51,10 +51,42 @@ li {
 }
 
 .comments__item {
+  position: relative;
+
   min-width: 30%;
 
   border: 1px solid grey;
   margin: 10px 0 10px 0;
 
   text-align: center;
+}
+
+.comments__text {
+
+}
+
+.comments__btn-close {
+  display: none;
+}
+
+.comments__item:hover .comments__btn-close {
+  display: block;
+
+  position: absolute;
+  top: 40%;
+  right: 5px;
+
+  padding: 0;
+  margin: 0;
+
+  height: 15px;
+  width: 15px;
+
+  border: 1px solid grey;
+
+  background-color: #fff;
+
+  background-image: url('../comments-list/img/exit-btn.svg');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
