--- a/src/style/css/blocks/sign-in/sign-in.scss
+++ b/src/style/css/blocks/sign-in/sign-in.scss
@@ -3,16 +3,8 @@
   flex-direction: column;
   justify-content: center;
 
-  width: 100%;
-  height: 70vh;
-
-  // background-color: #000;
+  // height: 100%;
   z-index: 1;
-}
-
-.login-box {
-
-  // padding-top: 10%;
 }
 
 .form-sign-in {
@@ -20,19 +12,11 @@
   flex-direction: column;
   justify-content: center;
 
-  width: 40%;
-  margin: 0 auto;
-}
+  width: adaptiveSizePx(400, 600, $_phoneWidth, $_maxDesktopWidth);
+  margin: 5% auto 0;
 
-.form-sign-in__fieldset {
-  border: 2px solid #000;
-  border-radius: 5px;
-}
-
-.form-sign-in__legend {
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 30px;
+  background-color: #383B3F;
+  border-radius: 10px;
 }
 
 .wrap-sign-form {
@@ -42,11 +26,11 @@
 
   margin: 0 auto;
 
-  width: 60%;
+  width: 80%;
 }
 
 .sign-in-data {
-
+  padding-top: 10%;
 }
 
 .sign-in-data__item {
@@ -76,24 +60,49 @@
 .sign-in-data__text {
   position: relative;
 
-  font-size: 16px;
+  align-self: flex-start;
+
+  padding-left: 3%;
+  padding-bottom: 3%;
+
+  font-size: adaptiveSizePx(12, 20, $_smPhoneWidth, $_maxDesktopWidth);
   font-weight: 500;
   line-height: 25px;
+
+  color: #fff;
 }
 
 .sign-in-data__input {
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 3%;
+  padding-bottom: 1%;
 
-  border: 1px solid #00000085;
+  border: 3px solid #fff;
 
   border-radius: 5px;
 
   background-color: #F4F5F4;
+
+  outline: none;
+
+  &:focus  {
+    border: 3px solid #ff000070;
+  }
+
+  &::placeholder {
+    font-size: adaptiveSizePx(12, 18, $_smPhoneWidth, $_maxDesktopWidth);
+  }
+
 }
 
 .sign-in-data__remember {
   padding-bottom: 8%;
+}
+
+.sign-in-data__remember-text {
+  padding-left: 3%;
+  font-size: adaptiveSizePx(9, 15, $_smPhoneWidth, $_maxDesktopWidth);
+
+  color: #fff;
 }
 
 .sign-in-btn-submit {
@@ -105,9 +114,30 @@
   padding-bottom: 3%;
 
   margin-bottom: 5%;
+
+  background-color: #03a9f4;
+
+  color: #000000ab;
+
+  border: none;
+  border-radius: 5px;
+  outline: none;
+
+  &:hover {
+    background-color: #00bcd4;
+    color: #fffffff0;
+
+    cursor: pointer;
+  }
 }
 
 .error-valid-password {
   position: relative;
   border: 1px solid red;
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .form-sign-in {
+    width: 100%;
+  }  
 }
