--- a/src/assets/css/blocks/sign-in/sign-in.scss
+++ b/src/assets/css/blocks/sign-in/sign-in.scss
@@ -73,8 +73,9 @@
 }
 
 .sign-in-data__input {
-  padding-top: 3%;
-  padding-bottom: 1%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2%;
 
   border: 3px solid #fff;
 
@@ -84,12 +85,15 @@
 
   outline: none;
 
+  font-size: 20px;
+
   &:focus  {
     border: 3px solid #ff000070;
   }
 
   &::placeholder {
     font-size: adaptiveSizePx(12, 18, $_smPhoneWidth, $_maxDesktopWidth);
+    font-weight: 400;
   }
 
 }
