--- a/src/assets/css/blocks/header/header.scss
+++ b/src/assets/css/blocks/header/header.scss
@@ -3,7 +3,8 @@
 
   background-color: #25272A;
 
-  border-radius: 5px;
+  // border-radius: 5px;
+  border-bottom: 3px solid #fff;
 
   z-index: 100;
 }
