--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,4 @@
 @import './assets/css/blocks/sign-in/sign-in.scss';
 @import './assets/css/blocks/background-img/slider-img.css';
 @import './assets/css/blocks/main/no-auth-page/main-no-auth-page.scss';
+@import './assets/css/blocks/main/auth-page/main-desktop.scss';
