--- a/src/assets/css/blocks/form/form-main.scss
+++ b/src/assets/css/blocks/form/form-main.scss
@@ -68,10 +68,10 @@
 .form-main-btn-submit {
   font-weight: 600;
 
-  padding-top: 3%;
-  padding-bottom: 3%;
+  // padding-top: 3%;
+  // padding-bottom: 3%;
 
-  margin-bottom: 5%;
+  // margin-bottom: 5%;
 
   background-color: #03a9f4;
 
