--- a/src/assets/css/blocks/sign-in/sign-in.scss
+++ b/src/assets/css/blocks/sign-in/sign-in.scss
@@ -52,6 +52,11 @@
 .form-login-btn-submit {
   font-size: 25px;
   line-height: 25px;
+
+  padding-top: 3%;
+  padding-bottom: 3%;
+
+  margin-bottom: 5%
 }
 
 .error-valid-password {
