--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -36,12 +36,6 @@ p {
 
 body {
   margin: 0;
-}
-
-.page-main {
-  margin: 0 auto; 
-  width: 100%;
-  height: 100vh;
 
   font-family: $mainFont;
   font-size: 16px;
@@ -49,6 +43,15 @@ body {
   font-weight: 400;
   color: #000;
   text-transform: none;
+}
+
+.page-main {
+  margin: 0 auto; 
+  width: 100%;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 
   background-color: #F2F2F2;
 }
@@ -75,4 +78,11 @@ body {
 .container-flex-column {
   display: flex;
   flex-direction: column;
+}
+
+input[type='search']::-webkit-search-decoration, 
+input[type='search']::-webkit-search-cancel-button, 
+input[type='search']::-webkit-search-results-button, 
+input[type='search']::-webkit-search-results-decoration {
+  display: none;
 }
