--- a/src/assets/css/mixins.scss
+++ b/src/assets/css/mixins.scss
@@ -1,6 +1,33 @@
 @function adaptiveSizePx($min, $max, $minWith, $maxWith) {
   @return calc(
     #{$min}px + (#{$max} - #{$min}) * (#{100vw} - #{$minWith}px) /
-      (#{$maxWith} - #{$minWith})
-  );
+    (#{$maxWith} - #{$minWith})
+    );
+}
+
+@function adaptiveSizeYPx($min, $max, $minWith, $maxWith) {
+  @return calc(
+    #{$min}px + (#{$max} - #{$min}) * (#{100vh} - #{$minWith}px) /
+    (#{$maxWith} - #{$minWith})
+    );
+}
+
+@keyframes bounce-keyframes {
+  0% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 1;
+  }
+}
+
+@keyframes reserve-keyframes {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
