--- a/src/index.scss
+++ b/src/index.scss
@@ -14,5 +14,7 @@
 @import "./assets/css/blocks/main/auth-page/main-desktop.scss";
 @import "./assets/css/blocks/main/auth-page/side-bar/side-bar.scss";
 @import "./assets/css/blocks/main/auth-page/add-channel/add-channel.scss";
+@import "./assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss";
 @import "./assets/css/blocks/main/auth-page/user-desktop/user-desktop.scss";
+@import "./assets/css/blocks/main/auth-page/user-info/user-info.scss";
 
