--- a/src/assets/css/blocks/main/auth-page/add-channel/add-channel.scss
+++ b/src/assets/css/blocks/main/auth-page/add-channel/add-channel.scss
@@ -1,9 +1,9 @@
 .add-channel {
-  display: block;
+  // display: block;
   position: absolute;
 
   width: 100%;
-  height: 88%;
+  height: 100%;
 
   background: #00000021;
 
