--- a/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
+++ b/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
@@ -1,5 +1,6 @@
 .side-bar {
-  width: 335px;
+  // width: 335px;
+  flex: 0 1 20%;
 
   background-color: #25272a;
 
@@ -20,6 +21,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  margin-bottom: 5%;
 
   color: #919191;
 }
@@ -52,17 +55,30 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  padding: 5% 0;
 }
 
 .friends__link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  margin-left: 15%;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+
+  color: #B5B5B5;
+
   &--online::after,
   &--offline::after {
     content: "";
 
-    margin-left: 10px;
     position: absolute;
 
-    top: 40%;
+    left: 0;
 
     width: 8px;
     height: 8px;
@@ -87,13 +103,86 @@
   }
 }
 
-///////////////////////////
+.friends__user-img {
+  margin-right: 30%;
+  width: 34px;
+  height: 34px;
 
-.search-list-conteiner-test {
-  display: none;
+  background: #fff;
+
+  border: 1px solid #B5B5B5;
+  border-radius: 5px;
 }
 
-.search-room-input:focus + .search-list-conteiner-test,
-.search-list-conteiner-test:hover {
+//////
+
+.search-room {
+  position: relative;
+
+  width: 100%;
+}
+
+.search-room__input {
+  width: 100%;
+
+  padding: 2%;
+
+  border-radius: 5px;
+  border: 1px solid #fff;
+
+  &:focus {
+    outline: none;
+    border: 1px solid red;
+    box-shadow: 0 0 0 1pt red;
+  }
+}
+
+.search-room__list {
+  display: none;
+
+  width: 100%;
+
+  margin: 2% 0;
+
+  position: absolute;
+  top: 105%;
+
+  background: #fff;
+
+  z-index: 10;
+}
+
+.search-room__item {
+  padding: 3% 8%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  border: 1px solid #fff;
+  
+  &:hover {
+    background: #f3f3f3;
+  }
+
+  &:hover .search-room__icon {
+    fill: black;
+  }
+}
+
+.search-room__input:focus + .search-room__list,
+.search-room__list:hover {
   display: block;
+}
+
+.search-room__link {
+  color: black;
+}
+
+.search-room__icon {
+  fill: #fff;
+
+  width: 14px;
+  height: 14px;
 }
