--- a/src/assets/css/blocks/main/auth-page/user-desktop/chat-user-desktop/chat-user-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/user-desktop/chat-user-desktop/chat-user-desktop.scss
@@ -52,12 +52,13 @@
 
   font-weight: 400;
   font-size: 20px;
+  text-transform: capitalize;
 
   padding: 0 3%;
 
   color: #3577ef;
 
-  background: #fff;
+  background: #e7ebf0;
 }
 
 .chat-messages-list {
@@ -88,7 +89,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 
   width: 90px;
 
@@ -96,7 +97,7 @@
 }
 
 .chat-messages__user-img {
-  border-radius: 5px;
+  border-radius: 50%;
 }
 
 .chat-messages__info {
@@ -112,6 +113,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  margin-bottom: 3%;
 }
 
 .host-info {
@@ -141,8 +144,6 @@
 }
 
 .chat-messages__text {
-  margin-top: 1%;
-
   padding: 3%;
 
   font-weight: 400;
@@ -152,7 +153,7 @@
 }
 
 .messages__user-text {
-  background: #e2e2e2fa;
+  background: #fff;
 }
 
 .messages__host-text {
