--- a/src/assets/css/blocks/main/auth-page/user-desktop/user-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/user-desktop/user-desktop.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   
   flex: 0 1 100%;
+
+  background: #f1f1f1;
 }
 
 @import "./header-user-desktop/header-user-desktop.scss";
