--- a/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
+++ b/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
@@ -1,5 +1,4 @@
 .side-bar {
-  // width: 335px;
   flex: 0 1 20%;
 
   background-color: #25272a;
@@ -11,115 +10,17 @@
   display: flex;
   flex-direction: column;
 
-  padding-top: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-top: 2vh;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
-
-.channels-header,
-.friends-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  margin-bottom: 5%;
-
-  color: #919191;
-}
-
-.channels-header__text,
-.friends-header__text,
-.channels-header__count,
-.friends-header__count {
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 14px;
-}
-
-.channels__list,
-.friends__list {
-  display: flex;
-  flex-direction: column;
-
-  padding-left: 5%;
-}
-
-.channels__link,
-.friends__link {
-  color: #fff;
-}
-
-.friends__item {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  padding: 5% 0;
-}
-
-.friends__link {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  margin-left: 15%;
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-
-  color: #B5B5B5;
-
-  &--online::after,
-  &--offline::after {
-    content: "";
-
-    position: absolute;
-
-    left: 0;
-
-    width: 8px;
-    height: 8px;
-
-    border-radius: 50%;
-  }
-
-  &--online::after {
-    background-color: #2cc726;
-  }
-
-  &--offline::after {
-    background-color: grey;
-  }
-
-  &:hover {
-    color: red;
-  }
-
-  &--active {
-    color: red;
-  }
-}
-
-.friends__user-img {
-  margin-right: 30%;
-  width: 34px;
-  height: 34px;
-
-  background: #fff;
-
-  border: 1px solid #B5B5B5;
-  border-radius: 5px;
-}
-
-//////
 
 .search-room {
   position: relative;
 
   width: 100%;
+
+  margin-bottom: 2vh;
 }
 
 .search-room__input {
@@ -142,7 +43,7 @@
 
   width: 100%;
 
-  margin: 2% 0;
+  margin: 0.5vh 0;
 
   position: absolute;
   top: 105%;
@@ -153,7 +54,7 @@
 }
 
 .search-room__item {
-  padding: 3% 8%;
+  padding: 1vh 1vw;
 
   display: flex;
   flex-direction: row;
@@ -183,6 +84,121 @@
 .search-room__icon {
   fill: #fff;
 
-  width: 14px;
-  height: 14px;
+  width: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
+  height: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
+}
+
+.channels-header,
+.friends-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  margin-bottom: 1vw;
+
+  color: #919191;
+}
+
+.channels-header__text,
+.friends-header__text,
+.channels-header__count,
+.friends-header__count {
+  font-size: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
+}
+
+.channels__list,
+.friends__list {
+  display: flex;
+  flex-direction: column;
+}
+
+.channels__list {
+  padding-left: 1.2vh;
+}
+
+.friends__item,
+.channels__item {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.channels__item {
+  padding: 0.5vh 0;
+}
+
+.friends__item {
+  padding: 1vh 0;
+}
+
+.channels__link {
+  color: #fff;
+  font-weight: 400;
+  font-size: adaptiveSizePx(15, 17, $_smDesktopWidth, $_maxDesktopWidth);
+  line-height: adaptiveSizePx(15, 17, $_smDesktopWidth, $_maxDesktopWidth);
+}
+
+.friends__link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  margin-left: 1.5vw;
+
+  font-weight: 400;
+  font-size: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
+  line-height: adaptiveSizePx(14, 17, $_smDesktopWidth, $_maxDesktopWidth);
+
+  color: #B5B5B5;
+
+  &--online::after,
+  &--offline::after {
+    content: "";
+
+    position: absolute;
+
+    left: 0;
+
+    width: adaptiveSizePx(7, 8, $_smDesktopWidth, $_maxDesktopWidth);
+    height: adaptiveSizePx(7, 8, $_smDesktopWidth, $_maxDesktopWidth);
+
+    border-radius: 50%;
+  }
+
+  &--online::after {
+    background-color: #2cc726;
+  }
+
+  &--offline::after {
+    background-color: grey;
+  }
+
+  &:hover {
+    color: red;
+  }
+
+  &--active {
+    color: red;
+  }
+}
+
+.friends__user-img {
+  margin-right: 30%;
+  width: adaptiveSizePx(30, 34, $_smPhoneWidth, $_maxDesktopWidth);
+  height: adaptiveSizePx(30, 34, $_smPhoneWidth, $_maxDesktopWidth);
+
+  background: #fff;
+
+  border: 1px solid #B5B5B5;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: $smDesktopWidth) {
+  .side-bar {
+    flex: 0 1 25%;
+  }
 }
