--- a/src/assets/css/blocks/main/auth-page/user-info/user-info.scss
+++ b/src/assets/css/blocks/main/auth-page/user-info/user-info.scss
@@ -8,7 +8,8 @@
   border: 1px solid #000;
 }
 
-.section-user-info {
+.section-user-info-show,
+.section-user-info-hide {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -16,9 +17,11 @@
   flex: 0 1 20%;
 
   border-left: 2px solid #000;
-
-  background: linear-gradient(#ffffff, #eae6e6);
 }
+
+// .section-user-info-hide {
+//   display: none;
+// }
 
 .host-info-container {
   position: relative;
@@ -28,6 +31,8 @@
 
   width: 100%;
   height: 100%;
+
+  background: linear-gradient(#ffffff, #eae6e6);
 }
 
 .host-info__img-block {
@@ -141,10 +146,18 @@
 }
 
 .host-info__arrow-block {
+  display: none;
   position: absolute;
 
   bottom: 1%;
-  left: 5%;
+}
+
+.host-info__arrow-icon-right {
+  transform: rotate(0deg);
+}
+
+.host-info__arrow-icon-left {
+  transform: rotate(180deg);
 }
 
 .host-info__edit-block {
@@ -160,4 +173,68 @@
   background: #eae6e6;
 
   border: none;
+}
+
+@media screen and (max-width: $smDesktopWidth) {
+  .section-user-info-show {
+    position: absolute;
+
+    left: 23.8%;
+
+    display: flex;
+
+    height: 100%;
+    width: 76.2%;
+
+    background: #00000021;;
+  }
+
+  .section-user-info-hide {
+    display: none;
+  }
+
+  .host-info-container {
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+
+    width: 35%;
+
+    z-index: 9;
+  }
+
+  .host-info__arrow-block {
+    display: block;
+  }
+
+}
+
+@media screen and (max-width: $tableWidth) {
+  .section-user-info-show {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+    // flex: 0 1 100%;
+
+    border-left: 2px solid #000;
+  }
+
+  .section-user-info-hide {
+    display: none;
+  }
+
+  .host-info-container {
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100%;
+
+    background: linear-gradient(#ffffff, #eae6e6);
+  }
 }
