--- a/src/assets/css/blocks/main/auth-page/user-desktop/header-user-desktop/header-user-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/user-desktop/header-user-desktop/header-user-desktop.scss
@@ -113,12 +113,12 @@
 .menu-room-list {
   position: absolute;
 
-  top: 4.5vh;
-  right: 1.3vw;
+  top: 6.2vh;
+  right: 0vw;
 
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 
   padding: 0 10%;
 
@@ -129,6 +129,8 @@
   border-radius: 7px;
 
   animation: bounce-keyframes 0.2s;
+
+  font-size: adaptiveSizePx(11, 16, $_smPhoneWidth, $_maxDesktopWidth);
 
   z-index: 10;
 }
@@ -163,5 +165,35 @@
 
   &:hover {
     fill: red;
+  }
+}
+
+@media screen and (max-width: $smDesktopWidth) {
+  .menu-room-list {
+    width: 18vw;
+  }
+}
+
+@media screen and (max-width: $tableWidth) {
+  .menu-room-list {
+    width: 21vw;
+  }
+}
+
+@media screen and (max-width: $smTableWidth) {
+  .menu-room-list {
+    width: 24vw;
+  }
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .menu-room-list {
+    width: 28vw;
+  }
+}
+
+@media screen and (max-width: $smPhoneWidth) {
+  .menu-room-list {
+    width: 40vw;
   }
 }
