--- a/src/assets/css/blocks/main/auth-page/user-info/user-info.scss
+++ b/src/assets/css/blocks/main/auth-page/user-info/user-info.scss
@@ -38,11 +38,6 @@
   width: 100%;
 }
 
-// .host-info__img {
-//   width: 100%;
-//   height: 100%;
-// }
-
 .host-info__data-block {
   width: 100%;
   display: flex;
@@ -227,7 +222,6 @@
     bottom: 1%;
     left: 2%;
   }
-
 }
 
 @media screen and (max-width: $tableWidth) {
@@ -247,8 +241,6 @@
 
     width: 40%;
     max-height: 70%;
-
-    // padding: 0 3% 3%;
 
     background: none;
     border: 1px solid #000;
@@ -336,7 +328,7 @@
 
   .host-info__name-text {
     font-size: adaptiveSizePx(15, 20, $_smPhoneWidth, $_phoneWidth);
-    line-height: adaptiveSizePx(15, 20, $_phoneWidth, $_phoneWidth);
+    line-height: adaptiveSizePx(15, 20, $_smPhoneWidth, $_phoneWidth);
   }
 
   .host-info__social-network-link {
@@ -360,7 +352,7 @@
   }
 
   .host-info__status-text {
-    font-size: adaptiveSizePx(14, 17, $_phoneWidth, $_tableWidth);
-    line-height: adaptiveSizePx(14, 17, $_phoneWidth, $_tableWidth);
+    font-size: adaptiveSizePx(13, 15, $_smPhoneWidth, $_phoneWidth);
+    line-height: adaptiveSizePx(13, 15, $_smPhoneWidth, $_phoneWidth);
   }
 }
