--- a/src/assets/css/blocks/header/header.scss
+++ b/src/assets/css/blocks/header/header.scss
@@ -13,7 +13,7 @@
   flex-direction: row;
   justify-content: space-between;
 
-  height: 100px;
+  height: 100%;
 }
 
 .logo {
@@ -136,20 +136,24 @@
     margin-right: 2vw;
 
     z-index: 20;
+    transform: translateX(0%);
+    transition: all 0.4s;
+
+    &.wrapper-icon-menu-active {
+      position: absolute;
+      top: 3vh;
+      transform: translateX(-30vw);
+    }
   }
 
   .wrapper-link-menu {
-    width: 0;
-    transition: width 0.3s linear;
-  }
-
-  .wrapper-link-menu-open {
-    width: 30vw;
-    transition: width 0.3s linear;
-  }
-
-  .response-menu {
-    display: none;
+    position: absolute;
+    transform: translateX(500%);
+    transition: all 0.4s;
+    &.wrapper-link-menu-open {
+      width: 30vw;
+      transform: translateX(0%);
+    }
   }
 
   .response-menu-burger {
@@ -180,16 +184,14 @@
   }
 
   .wrapper-icon-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    margin-right: 2vw;
-
-    z-index: 20;
+    &.wrapper-icon-menu-active {
+      transform: translateX(0vw);
+    }
   }
 
-  .response-menu-burger {
-    
+  .wrapper-link-menu {
+    &.wrapper-link-menu-open {
+      width: 100vw;
+    }
   }
 }
