--- a/src/assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss
+++ b/src/assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss
@@ -1,7 +1,17 @@
-.modal-user-info-show {
-  animation: bounce-keyframes 0.2s;
+.add-channel {
+  transition: all 0.5s;
+
+  &.modal-user-info-hide {
+    transform: translateY(-300%);
+  }
+
+  &.modal-user-info-show {
+    transform: translateY(0%);
+  }
 }
 
-.modal-user-info-hide {
-  display: none;
+.edit-user-data-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
