--- a/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
+++ b/src/assets/css/blocks/main/auth-page/side-bar/side-bar.scss
@@ -2,8 +2,6 @@
   position: relative;
   flex: 0 1 20%;
 
-  height: 87vh;
-
   background-color: #25272a;
 
   overflow: auto;
@@ -69,7 +67,7 @@
   align-items: center;
 
   border: 1px solid #fff;
-  
+
   &:hover {
     background: #f3f3f3;
   }
@@ -160,7 +158,7 @@
   font-size: adaptiveSizePx(12, 14, $_smDesktopWidth, $_maxDesktopWidth);
   line-height: adaptiveSizePx(14, 17, $_smDesktopWidth, $_maxDesktopWidth);
 
-  color: #B5B5B5;
+  color: #b5b5b5;
 
   &--online::after,
   &--offline::after {
@@ -200,7 +198,7 @@
 
   background: #fff;
 
-  border: 1px solid #B5B5B5;
+  border: 1px solid #b5b5b5;
   border-radius: 5px;
 }
 
@@ -252,7 +250,6 @@
 
   .side-bar-block {
     padding: 2vh 15vw 2vh 15vw;
-
   }
 
   .side-bar-phone-hide {
