--- a/src/assets/css/blocks/main/auth-page/user-desktop/chat-user-desktop/chat-user-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/user-desktop/chat-user-desktop/chat-user-desktop.scss
@@ -16,7 +16,6 @@
 
   height: 72vh;
 
-
   padding-top: 1.5%;
 
   &::-webkit-scrollbar {
@@ -28,7 +27,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background: #8D8D8D;
+    background: #8d8d8d;
     border-radius: 25px;
   }
 }
@@ -171,6 +170,7 @@
   justify-content: flex-end;
 
   padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .form-messages__input {
@@ -222,6 +222,10 @@
 
   .chat-messages__item {
     max-width: 64vw;
+  }
+
+  .form-messages-submit {
+    padding-bottom: 3%;
   }
 }
 
