--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -37,25 +37,29 @@ p {
 body {
   margin: 0;
 
+  min-width: 320px;
+
   font-family: $mainFont;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
   color: #000;
   text-transform: none;
+
+  overflow-x: hidden;
 }
 
 .page-main {
   position: relative;
-  
-  margin: 0 auto; 
+
+  margin: 0 auto;
   width: 100%;
   height: 100vh;
 
   display: flex;
   flex-direction: column;
 
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .visually-hidden {
@@ -70,7 +74,7 @@ body {
 
 .center-margin-auto {
   margin: 0 auto;
-} 
+}
 
 .container-flex-row {
   display: flex;
@@ -90,9 +94,9 @@ body {
   transform: rotate(180deg);
 }
 
-input[type='search']::-webkit-search-decoration, 
-input[type='search']::-webkit-search-cancel-button, 
-input[type='search']::-webkit-search-results-button, 
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
